<resources>
    <string name="splash_text_note">Take off your career to new \n heights with the best \n start-ups to join</string>
    <string name="splash_go_text">Let\'s Go!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="first_time_on_startupjob_nwelcome_onboard">First time on StartupJob?\nWelcome onboard!</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="app_name">Start-up Jobs</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="welcome_msg">Welcome to AI-Powered Automated Hiring Platform for Start-up </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="string_action_signup">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_str_upload_resume">Upload Resume</string>
    <string name="string_hint_email_id">Email ID</string>
    <string name="string_hint_password">Password</string>
    <string name="string_info_remember_me">Remember me</string>
    <string name="string_action_forgot_password">Forgot password?</string>
    <string name="string_action_login">Login</string>
    <string name="string_action_signup_redirect">Register</string>
    <string name="string_info_social_signin">Or Continue With</string>
    <string name="string_action_fb_signin">Sign in with Facebook</string>
    <string name="string_action_google_signin">Sign in with Google</string>
    <string name="string_action_linkedin_signin">Sign in with LinkedIn</string>
    <string name="string_candidate_sign_up">Candidate Sign up</string>
    <string name="string_hint_first_name">First Name</string>
    <string name="string_hint_last_name">Last Name</string>
    <string name="string_hint_reenter_password">Re-enter Password</string>
    <string name="string_hint_enter_otp">Enter OTP</string>
    <string name="string_action_send_otp">Send OTP</string>
    <string name="string_action_find_jobs">Find Jobs</string>
    <string name="string_action_myprofile">My Profile</string>
    <string name="string_action_resend_otp">Resend OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="string_hint_skills">eg. Nodejs, java, etc.</string>
    <string name="string_hint_location">eg. Noida, Delhi, etc.</string>
    <string name="string_label_skills">Skills</string>
    <string name="string_label_job_type">Job Type</string>
    <string name="string_label_location">Location</string>
    <string name="string_action_search_jobs">Search</string>
    <string name="string_label_postedjobs">Posted Jobs</string>
    <string name="string_placeholder_text">Not available</string>
    <string name="string_action_apply">Apply</string>
    <string name="string_action_apply_now">Apply Now</string>
    <string name="string_label_salary">Salary:\u0020</string>
    <string name="string_label_experience">Experience:\u0020</string>
    <string name="string_label_requirements">Requirements:\u0020</string>
    <string name="string_label_job_title">Job Title:\u0020</string>
    <string name="string_label_job_desc">Job Description:\u0020</string>
    <string name="string_label_address">Address:\u0020</string>
    <string name="string_label_date">Date:\u0020</string>
    <string name="string_label_job_type_colon">Job Type:\u0020</string>
    <string name="string_label_key_responsibilities">Key Responsibilities</string>
    <string name="string_value_years">\u0020-\u0020 years</string>
    <string name="string_value_year">\u0020-\u0020 year</string>
    <string name="string_label_apply_job">Apply Job</string>
    <string name="string_label_about_candidate">About Candidate:</string>
    <string name="string_hint_candidate_summary_optional">Candidate Summary (optional)</string>
    <string name="string_action_upload_cv_resume">Upload CV/Resume</string>
    <string name="string_hint_candidate_current_background">Candidate Current Background</string>
    <string name="string_hint_full_name">Full Name</string>
    <string name="string_hint_email_address">Email Address</string>
    <string name="string_hint_mobile_no">Mobile No.</string>
    <string name="string_hint_full_address">Full Address</string>
    <string name="string_placeholder_no_results_found">No relevant jobs found</string>
    <string name="string_error_msg_please_upload_resume">Please upload resume!</string>
    <string name="string_label_resume_uploaded">Resume Uploaded..</string>
    <string name="string_label_employers_list">Employers</string>
    <string name="string_placeholder_no_emp_found">No employers found</string>
    <string name="string_label_emp_email">Email:\u0020</string>
    <string name="string_label_emp_url">Website:\u0020</string>
    <string name="string_label_emp_desc">Employer Description:\u0020</string>
    <string name="label_find_startups">Find Startups</string>
    <string name="success">Success</string>
    <string name="cntinue">Continue</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="hi_welcome_back">Hi, Welcome back!</string>
    <string name="entered_registered_email">Entered registered email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_email_otp">Enter Email OTP</string>
    <string name="enter_mobile_otp">Enter Mobile OTP</string>
    <string name="upload_resume_cv">Upload Resume/CV</string>
    <string name="docs_pdf_max_2_mb">.doc,.docs,.pdf| max 2 mb</string>
    <string name="i_accept_all_the_terms_amp_conditions"><![CDATA[I accept all the terms & conditions]]></string>
    <string name="t_and_c_link"> By continuing you accept the standard \n<a href="https://www.startupjob.in/terms">Terms &amp; conditions</a> and our <a href="https://www.startupjob.in/privacy">Privacy Policy</a> of StartupJob .in</string>
    <string name="terms_and_privacy">By signing up you agree to our <a href="terms:">Terms of Service</a> and <a href="privacy:">Privacy Policy.</a></string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="use_mobile">Use Mobile</string>
    <string name="enter_10digit_mobileno">Enter 10 digit mobile no.</string>
    <string name="verify_and_continue">Verify and Continue</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_blog">Blog</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">554977906467254</string>
    <string name="fb_login_protocol_scheme">fb554977906467254</string>
    <string name="facebook_client_token">b3b856fe17a6b1cb9435ca1d48fe5d33</string>
    <string name="or">Or</string>
    <string name="lets_recover_it">Let\'s recover it</string>
    <string name="submit">Submit</string>
    <string name="enter_registered_mobile_no">Enter registered mobile no.</string>
    <string name="enter_new_password_here">Enter new password here</string>
    <string name="title_profile">Profile</string>
    <string name="profile_score">Profile Score</string>
    <string name="resume">Resume</string>
    <string name="personal_details">Personal Details</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="current_location">Current Location</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="professional_summary">Professional Summary</string>
    <string name="profile_title">Profile title</string>
    <string name="annual_salary">Annual salary</string>
    <string name="total_experience">Total Experience</string>
    <string name="team_handled">Team handled</string>
    <string name="notice_period">Notice period</string>
    <string name="work_experience">Work Experience</string>
    <string name="add">Add</string>
    <string name="string_searchbar_hint">Jobs Titles, keywords, Company</string>
    <string name="string_account_created">Account Created</string>
    <string name="string_cv_resume_upload">CV/ Resume Upload</string>
    <string name="string_complete_candidate_profile">Complete Candidate Profile</string>
    <string name="string_set_job_preferences">Set Job preferences</string>
    <string name="string_dummy_name">Xyz Abc</string>
    <string name="string_dummy_date_time">(Last Updated on: )</string>
    <string name="string_dummy_percentage">20%</string>
    <string name="string_profile_completed">Profile Completed</string>
    <string name="string_jobs_for_you">Jobs for you</string>
    <string name="total_jobs_applied">Total Jobs Applied</string>
    <string name="interviewed">Interviewed</string>
    <string name="offer_letters">Offer Letters</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="apply">Apply</string>
    <string name="string_job_details">Job details \n\u25CF</string>
    <string name="string_save">Save</string>
    <string name="profile">Profile</string>
    <string name="companies">Companies</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes\n</string>
    <string name="no">No\n</string>
    <string name="view">View</string>
    <string name="pass_reset_success">Password Reset Successful</string>
    <string name="job_title">Job Title</string>
    <string name="annual_salary_in_lakhs">Annual salary in lakhs</string>
    <string name="total_experience_in_years">Total experience in years</string>
    <string name="notice_period_in_days">Notice period in days</string>
    <string name="company_name">Company Name</string>
    <string name="experience">Experience</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="i_currently_work_here">I currently work here</string>
    <string name="designation">Designation</string>
    <string name="describe_your_role">Describe your role</string>
</resources>