<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editdetails_layout_workexperience">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editwexp_edittext_designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/designation"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editwexp_edittext_companyname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/company_name"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_designation" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editwexp_edittext_yourrole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/describe_your_role"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_companyname"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editwexp_edittext_salaryinlakhs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/annual_salary_in_lakhs"
        android:inputType="number"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_yourrole" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editwexp_edittext_expplaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/experience"
        android:textStyle="bold"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_salaryinlakhs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editwexp_edittext_fromdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/from_date"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/icon_arrow_down_filled"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:drawable/edit_text"
        app:layout_constraintEnd_toStartOf="@+id/editwexp_edittext_todate"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_expplaceholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editwexp_edittext_todate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/to_date"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        android:textColor="@color/black"
        android:background="@android:drawable/edit_text"
        android:drawableEnd="@drawable/icon_arrow_down_filled"
        app:layout_constraintStart_toEndOf="@+id/editwexp_edittext_fromdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_expplaceholder" />

    <CheckBox
        android:id="@+id/editwexp_checkbox_iworkhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editwexp_edittext_fromdate"
        android:text="@string/i_currently_work_here"/>


</androidx.constraintlayout.widget.ConstraintLayout>