<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editdetails_layout_professionaldetails">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_jobtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/job_title"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_anualsalry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/annual_salary_in_lakhs"
        android:inputType="number"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_jobtitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_totalexp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/total_experience_in_years"
        android:inputType="number"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_anualsalry" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_teamhandled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/team_handled"
        android:inputType="number"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_totalexp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_noticeperiod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/notice_period_in_days"
        android:inputType="number"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_teamhandled" />


</androidx.constraintlayout.widget.ConstraintLayout>