<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_personaldetailsplaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_5dp"
        android:text="@string/personal_details"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/personaldetails_iv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_emailidplaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin20"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_personaldetailsplaceholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_emailidvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin20"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_personaldetailsplaceholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_mobilenoplaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:text="@string/mobile_no"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_emailidplaceholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_mobilenovalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_emailidplaceholder" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_clocationplaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:text="@string/current_location"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_mobilenoplaceholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_clocationvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_mobilenoplaceholder" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_dobplaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_clocationvalue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_dobvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_clocationvalue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_genderplaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_dobplaceholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personaldetails_textview_gendervalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_10dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/personaldetails_textview_dobplaceholder" />
</androidx.constraintlayout.widget.ConstraintLayout>