<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/string_hint_full_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editpd_edittext_mobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:paddingStart="@dimen/activity_vertical_margin_15dp"
        android:paddingEnd="@dimen/activity_vertical_margin_15dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_email" />

    <AutoCompleteTextView
        android:id="@+id/editpd_autocompletetv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:background="?attr/editTextBackground"
        android:drawableEnd="@drawable/icon_arrow_down_filled"
        android:padding="@dimen/activity_vertical_margin_10dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_edittext_mobileno" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editpd_spinner_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:background="?attr/editTextBackground"
        android:drawableEnd="@drawable/icon_arrow_down_filled"
        android:padding="@dimen/activity_vertical_margin_10dp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_autocompletetv_location" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editpd_textview_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_15dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="@dimen/title_heading_14sp"
        app:layout_constraintTop_toBottomOf="@+id/editpd_spinner_dob" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/editpd_textview_gender">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rdbJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            style="@style/RadioButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rdbPython"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            style="@style/RadioButtonStyle"
            app:layout_constraintStart_toStartOf="@+id/rdbAngular"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rdbAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non Binary"
            style="@style/RadioButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdbJava" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rdbAngular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prefer Not to say"
            style="@style/RadioButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdbJava" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>